pRUEBA DE COMMIT
AA

--- a/localizacion/index.html
+++ b/localizacion/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<p>Click the button to get your coordinates.</p>
+<p>Click the button to get your coordinateSSs.</p>
 
 <button onclick="getLocation()">Try It</button>
 
