--- a/Registro/index.html
+++ b/Registro/index.html
@@ -14,31 +14,79 @@
 			function myFunction(){
 				var lacontrasena=document.getElementById("contrasena");
 				var textLength = lacontrasena.value.length;
-					if(textLength < 6 && textLength != 0){
-						document.getElementById("contrasena").style.border="1px solid red";
+					if(textLength < 6 ){
+						document.getElementById("contrasena").style.border=$colorError;
+						$("#verificacionContrasena").slideDown();
 					}
 					else{
-						document.getElementById("contrasena").style.border=document.getElementById("email").style.border;
+						document.getElementById("contrasena").style.border=$colorOk;
+						$("#verificacionContrasena").slideUp()
 					}
 				}
 		$(document).ready(function(){
-				$("#elparrafo").hide();
+				$colorOk = document.getElementById("email").style.border;
+				$colorError = 'solid 1px red';
+				$("#verificacionEmail").hide();
+				$("#verificacionEmail").css('color','red');
+				$("#verificacionContrasena").hide();
+				$("#verificacionContrasena").css('color','red');			
+				$("#verificacionNick").hide();
+				$("#verificacionNick").css('color','red');
+
 				$("#email").blur(function(){
-					//var _email = '_email=' + $(this).val();
 					$.ajax({
 						type: "post",
 						url:'ValidationForm.php',
 						data: {'action':'emailValidation','email': $(this).val()},
 						success: function(result) {
-							if(result == "true")
-								$("#elparrafo").show();
-
-							else					
-								$("#elparrafo").hide();
+							if(result == "true"){
+								$("#email").css('border', $colorError);
+								$("#verificacionEmail").slideDown();
+							}
+							else{
+								$("#email").css('border', $colorOk);
+								$("#verificacionEmail").slideUp();
+							}
 						}
 					});
 				});
-			});
+
+				$("#nick").blur(function(){
+					$.ajax({
+						type: "post",
+						url:'ValidationForm.php',
+						data: {'action':'nickValidation','nick': $(this).val()},
+						success: function(result) {
+							if(result == "true"){
+								$("#nick").css('border', $colorError);
+								$("#verificacionNick").slideDown();
+							}
+							else{
+								$("#nick").css('border', $colorOk);
+								$("#verificacionNick").slideUp();
+							}
+						}
+					});
+				});
+
+
+				$("#EnviarRegistro").click(function(e) {
+					if($("#verificacionEmail").is(":visible") || ($("#email").val() == "")){
+							e.preventDefault();
+							$("#email").focus();
+						}
+					else if($("#verificacionContrasena").is(":visible") || ($("#contrasena").val() == "")){
+							e.preventDefault();
+							$("#contrasena").focus();
+						}
+					else if($("#verificacionNick").is(":visible") || ($("#nick").val() == "")){
+							e.preventDefault();
+							$("#nick").focus();
+					}
+
+				});
+
+		});
 		</script>
 		
 </head>
@@ -64,7 +112,9 @@
 				<input type="checkbox" required>He leido y estoy de acuerdo con los <a href="terminosYcondiciones.html">terminos y condiciones</a><br><br>
 				<button type="submit" id="EnviarRegistro" class="btn btn-default" name="registerUser">Registrate</button>
 				</div>
-				<p id="elparrafo">El usuario ya existe</p>
+				<p id="verificacionEmail" >El correo electronico ya se ha usado</p>
+				<p id="verificacionContrasena">La contraseña tiene que tener longitud minima 6 caracteres</p>
+				<p id="verificacionNick">El nick ya está en uso</p>
 		</form>
 	</div>	
 </body>
