--- a/localizacion/index.html
+++ b/localizacion/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script>
+	$(document).ready(function () {		
+		$("#locationButton").click(function(){
+				getLocation();	
+			});
+	});
+	function getLocation() {
+	if (navigator.geolocation) {
+       navigator.geolocation.getCurrentPosition(showPosition);
+    } else { 
+
+    }
+	}
+	function showPosition(position) {
+	    document.getElementById("latitude").value = position.coords.latitude;
+	    document.getElementById("longitude").value = position.coords.longitude;	
+	}
+	;
+</script>
+</head>
 <body>
 
-<p>Click the button to get your coordinateSSs.</p>
+<input type="text" id="city" placeholder="Ciudad"><br> 
+<input type="text" id="postalCode" placeholder="Código postal"><br>
+<button  id="locationButton" >Encuentrame</button>
+<input  id="latitude"></input>
+<input id="longitude"></input>
 
-<button onclick="getLocation()">Try It</button>
-
-<p id="demo"></p>
-
-<script>
-var x = document.getElementById("demo");
-
-function getLocation() {
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition);
-    } else { 
-        x.innerHTML = "Geolocation is not supported by this browser.";
-    }
-}
-
-function showPosition(position) {
-    x.innerHTML = "Latitude: " + position.coords.latitude + 
-    "<br>Longitude: " + position.coords.longitude;	
-    alert("llega");
-}
-</script>
 
 </body>
 </html>
