--- a/BuscaPeliculas/index.html
+++ b/BuscaPeliculas/index.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+<link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
 
+<script type="text/javascript">
+$(document).ready(function(){
+    var timer;
+  $("#pelicula").keyup(function(){
+    clearTimeout(timer);
+    var ms = 400; 
+    var val = this.value;
+    timer = setTimeout(function() {
+       $.ajax({
+            type: "post",
+            url:'searchMovie.php',  
+            data: {'action':'getMovies', 'pelicula': getPelicula()},
+            success: function(data) {
+              var dataList = $("#searchMovies");
+              dataList.empty();
+              var rawData = data;
+              var misPeliculas ="";
+              var parsed = JSON.parse(rawData);
+                for(var i = 0; i < parsed.length;i++){
+                   //var opt = $("<option></option>").attr("value", parsed[i].title);
+                   var opt ="<option value ='" + parsed[i].title +"' style=\"background-image:url(http://ia.media-imdb.com/images/M/MV5BMTQ0MzI1NjYwOF5BMl5BanBnXkFtZTgwODU3NDU2MTE@._V1._CR93,97,1209,1861_SX89_AL_.jpg_V1_SX300.jpg);\"></option>";
+                    dataList.append(opt);
+                   // misPeliculas+="<option value ='" + parsed[i].title +"'>";
+                }
+            }
+          });
+    }, ms);
+  });
+});
 
-<style>
-table,th,td {
-  border : 1px solid black;
-  border-collapse: collapse;
-}
-th,td {
-  padding: 5px;
-}
-</style>
-<body>
-
-
-
-<form> 
-Pelicula: <input type="text" id="pelicula" onkeyup="loadDoc()">
-</form>
-<p><span id="txtHint"></span></p>
-
-
-<script>
 
 function getPelicula(){
   var peliAux = document.getElementById("pelicula").value;
@@ -56,9 +70,28 @@ function myFunction(xml) {
   document.getElementById("txtHint").innerHTML = txt;
 }
 
-
 </script>
 
+</head>
+<body>
 
+
+
+<input type="text" name="pelicula" id="pelicula" placeholder="Busca una pelicula" list="searchMovies" autocomplete="off">
+<datalist id="searchMovies"></datalist>
+<div class="demo-content">
+    <div class="demo-live">
+      <h3>Generated with page load</h3>
+      <select id="demo-htmlselect-basic">
+        <option data-description="Description with Facebook" data-imagesrc="http://dl.dropbox.com/u/40036711/Images/facebook-icon-32.png" value="0">Facebook</option>
+        <option data-description="Description with Twitter" data-imagesrc="http://dl.dropbox.com/u/40036711/Images/twitter-icon-32.png" value="1">Twitter</option>
+        <option data-description="Description with LinkedIn" data-imagesrc="http://dl.dropbox.com/u/40036711/Images/linkedin-icon-32.png" value="2">LinkedIn</option>
+        <option data-description="Description with Foursquare" data-imagesrc="http://dl.dropbox.com/u/40036711/Images/foursquare-icon-32.png" value="3">Foursquare</option>
+      </select>
+      <div class="spacer"></div>
+      
+      <hr />
+      <br />
+      <br />
 </body>
 </html>
