--- a/localizacion/index.html
+++ b/localizacion/index.html
@@ -2,18 +2,32 @@
 <html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+<link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
 <script>
 	$(document).ready(function () {		
+		$("#longitude").hide();
+		$("#latitude").hide();
 		$("#locationButton").click(function(){
 				getLocation();	
+				$.ajax({
+						url: "http://nominatim.openstreetmap.org/reverse?format=json&lat=40.4754202&lon=-3.5865715&zoom=18&addressdetails=1", 	
+						success: function(result){
+				    		$("#city").val(result.address.city);
+				    		$("#postalCode").val(result.address.postcode);
+				    }});
 			});
 	});
 	function getLocation() {
+		
 	if (navigator.geolocation) {
        navigator.geolocation.getCurrentPosition(showPosition);
     } else { 
-
     }
+
+   		 document.getElementById("latitude").value = "40.4754202";
+	    document.getElementById("longitude").value = "-3.5865715";	
 	}
 	function showPosition(position) {
 	    document.getElementById("latitude").value = position.coords.latitude;
