--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -83,9 +83,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
 
-        <li id="enCartelera"><a href="#">En cartelera <span class="sr-only">(current)</span></a></li>
-        <li ><a href="#">Juegos</a></li>
-        <li ><a href="#">Series</a></li>
+        <li id="enCartelera"><a href="index.html">En cartelera <span class="sr-only">(current)</span></a></li>
+        <li ><a href="games.html">Juegos</a></li>
+        <li ><a href="series.html">Series</a></li>
        
       </ul>
       <form class="navbar-form navbar-left" role="search">
