Viendo como quitarlos h2
Cuando no haya resultados

--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -99,7 +99,8 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="app">
-  <h2>Peliculas</h2>
+  <h2 id="withoutResults">No se ha encontrado ningún resultado</h2></br>
+  <h2 id="tituloPeliculas">Peliculas</h2>
   <div id="listOfMovies">
   <section class="movies">
     <div class="movie">
@@ -145,9 +146,7 @@
       <div class="desc">
         The man-cub Mowgli flees the jungle after a threat from the tiger Shere Khan. Guided by Bagheera the panther and the bear Baloo, Mowgli embarks on a journey of self-discovery, though he also meets creatures who don't have his best interests at heart.
       </div>
-    </div>
-
-    
+    </div>    
   </section>
 
 
@@ -241,10 +240,10 @@ On a December morning in 1970, the King of Rock 'n Roll showed up on the lawn of
   </section>
 </div>
 
-<h2>Juegos</h2>
+<h2 id="tituloJuegos" hidden>Juegos</h2>
 <div id="listOfGames"><section class="movies">
 </div>
-<h2>Series</h2>
+<h2 id="tituloSeries" hidden>Series</h2>
 <div id="listOfSeries"><section class="movies">
 </div>  <div class="detail">
     <svg class="close">
