--- a/Inicio/series.html
+++ b/Inicio/series.html
@@ -99,14 +99,14 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="app">
-  <h2>Peliculas</h2>
+  <h2 id="tituloPeliculas">Peliculas</h2>
   <div id="listOfMovies">
    </div>
 
-<h2>Juegos</h2>
+<h2 id="tituloJuegos">Juegos</h2>
 <div id="listOfGames"><section class="movies">
 </div>
-<h2>Series</h2>
+<h2 id="tituloSeries">Series</h2>
 <div id="listOfSeries">
   <section class="movies">
   <div class="movie" title="tt3006802">
