--- a/Inicio/games.html
+++ b/Inicio/games.html
@@ -99,10 +99,10 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="app">
-  <h2>Peliculas</h2>
+  <h2 id="tituloPeliculas">Peliculas</h2>
   <div id="listOfMovies">
    </div>
-<h2>Juegos</h2>
+<h2 id="tituloJuegos">Juegos</h2>
 <div id="listOfGames">
   <section class="movies">
   <div class="movie" title="tt5114332">
@@ -154,74 +154,74 @@
                                        </div>
                                        <div class="desc" id="tt3702328">Join the battle and play an important part in the Star Wars Galaxy. Lead the battle as you fight against the powerful empire in hope to regain freedom for the Galaxy.</div>
                                         </div>
-  <div class="movie" title="tt0098769">
-                                    <img src="http://ia.media-imdb.com/images/M/MV5BMTc0NTY5MzAwOV5BMl5BanBnXkFtZTcwNTk3MzcyMQ@@._V1_SX300.jpg" alt="" class="poster">
-                                     <div class="title">The Civil War</div>
+  <div class="movie" title="tt4795016">
+                                    <img src="http://ia.media-imdb.com/images/M/MV5BNzYwYjBlNDUtNzk1Ny00Mjk1LWE4MjAtNjhmNzM5YjBkMmIxXkEyXkFqcGdeQXVyMTk5ODYyMzA@._V1_SX300.jpg" alt="" class="poster">
+                                     <div class="title">Dark Souls III</div>
                                      <div class="info">
                                         <span class="length"></span>
-                                        <span class="year">1990</span>
+                                        <span class="year">2016</span>
                                        </div>
-                                       <div class="desc" id="tt0098769">This highly acclaimed mini series traces the course of the U.S. Civil War from the abolitionist movement through all the major battles to the death of President Lincoln and the beginnings of Reconstruction. The story is mostly told in the words of the participants themselves, through their diaries, letters, and Visuals are usually still photographs and illustrations of the time, and the soundtrack is likewise made up of war-era tunes played on period instruments. Several modern-day historians offer periodic comment and insight on the war's causes and events.</div>
-                                        </div>
-  <div class="movie" title="tt1806234">
-                                    <img src="http://ia.media-imdb.com/images/M/MV5BMTMyMDI0MDI3M15BMl5BanBnXkFtZTcwMTQ5NDQ3NA@@._V1_SX300.jpg" alt="" class="poster">
-                                     <div class="title">Human Planet</div>
+                                       <div class="desc" id="tt4795016">The game places the player in the role of the "Embered one" the lords of cinder have awoken and are need to be laid to rest once again, as you adventure across the land facing creatures big and small to fulfill your mission of defeating the lords of cinder. Old faces and locations will return in this 4th souls installment, are you brave enough to take on the lords of cinder and bring balance back to the world? Prepare to die again as you will be hooked with the beautiful but deadly areas to explore.</div>
+                         </div>
+  <div class="movie" title="tt3304506">
+                                    <img src="http://ia.media-imdb.com/images/M/MV5BMTg1MjEwNjA0N15BMl5BanBnXkFtZTgwMDM1NzIyMTE@._V1_SX300.jpg" alt="" class="poster">
+                                     <div class="title">Titanfall</div>
                                      <div class="info">
                                         <span class="length"></span>
-                                        <span class="year">2011</span>
+                                        <span class="year">2014</span>
                                        </div>
-                                       <div class="desc" id="tt1806234">Like all life forms, humanity partially adapts to types of natural environment, yet also tends to change them. Each episode examines how life differs for men and nature in some type of environment, from Arctic to desert and jungle, from coasts to mountains.</div>
-                                    </div>
-  <div class="movie" title="tt2372162">
-                                    <img src="http://ia.media-imdb.com/images/M/MV5BMjMzMjAxNDY5MV5BMl5BanBnXkFtZTgwMzAzNTQxODE@._V1_SX300.jpg" alt="" class="poster">
-                                     <div class="title">Orange Is the New Black</div>
+                                       <div class="desc" id="tt3304506">Science-fiction shooter video game that juxtaposes small vs. giant, natural vs. industrial, man vs. robot.</div>
+                         </div>
+  <div class="movie" title="tt4741306">
+                                    <img src="http://ia.media-imdb.com/images/M/MV5BNjE4MTc0ODc0OF5BMl5BanBnXkFtZTgwNjE1MDEzNzE@._V1_SX300.jpg" alt="" class="poster">
+                                     <div class="title">Fallout 4</div>
                                      <div class="info">
                                         <span class="length"></span>
-                                        <span class="year">2013–</span>
+                                        <span class="year">2015</span>
                                        </div>
-                                       <div class="desc" id="tt2372162">The story of Piper Chapman, a woman in her thirties who is sentenced to fifteen months in prison after being convicted of a decade-old crime of transporting money to her drug-dealing girlfriend.</div>
-                                        </div>  
+                                       <div class="desc" id="tt4741306">Fallout 4 is an open-world role-playing game developed by Bethesda Game Studios. In it, the player begins as a parent and spouse in the year 2077, but then must enter Vault 111 to survive the nuclear apocalypse. The player becomes the last remaining survivor of Vault 111 as he/she emerges into the nuclear wasteland in 2287, amidst the ruins of the city of Boston.</div>
+                                      </div>  
   </section>
     <section class="movies">
-    <div class="movie" title="tt1856010">
-                                    <img src="http://ia.media-imdb.com/images/M/MV5BMjM3ODMyMjc3MV5BMl5BanBnXkFtZTgwNDgzNDc5NzE@._V1_SX300.jpg" alt="" class="poster">
-                                     <div class="title">House of Cards</div>
+    <div class="movie" title="tt4936406">
+                                    <img src="http://ia.media-imdb.com/images/M/MV5BNDllM2QzMjktMjUwYy00ZTVhLWE2MDQtMTcxYmI1NmM0YWViXkEyXkFqcGdeQXVyMjM5ODMxODc@._V1_SX300.jpg" alt="" class="poster">
+                                     <div class="title">Mafia III</div>
                                      <div class="info">
                                         <span class="length"></span>
-                                        <span class="year">2013–</span>
+                                        <span class="year">2016</span>
                                        </div>
-                                       <div class="desc" id="tt1856010">Majority House Whip Francis Underwood takes you on a long journey as he exacts his vengeance on those he feels wronged him - that is, his own cabinet members including the President of the United States himself. Dashing, cunning, methodical and vicious, Frank Underwood along with his equally manipulative yet ambiguous wife, Claire take Washington by storm through climbing the hierarchical ladder to power in this Americanized recreation of the BBC series of the same name.</div>
+                                       <div class="desc" id="tt4936406">Lincoln Clay is back from the Vietnam War, and he joined a gang, searching for people to call "family." When they are crossed and brutally killed by the Italian mob, Clay vows to get revenge on the Italian Mafia. Joining him are his lieutenants Cassandra, Burke, and Vito Scaletta</div>
+                                     </div>
+    <div class="movie" title="tt3334704">
+                                    <img src="http://ia.media-imdb.com/images/M/MV5BYTBlN2M0NTctYjE4OS00YTNmLTg4YjMtOGI5MjIzNWFjOGY5XkEyXkFqcGdeQXVyMjYwNDA2MDE@._V1_SX300.jpg" alt="" class="poster">
+                                     <div class="title">Uncharted 4: A Thief's End</div>
+                                     <div class="info">
+                                        <span class="length"></span>
+                                        <span class="year">2016</span>
+                                       </div>
+                                       <div class="desc" id="tt3334704">Several years after his last adventure, retired fortune hunter, Nathan Drake, is forced back into the world of thieves. With the stakes much more personal, Drake embarks on a globe-trotting journey in pursuit of a historical conspiracy behind a fabled pirate treasure. His greatest adventure will test his physical limits, his resolve, and ultimately what he's willing to sacrifice to save the ones he loves.</div>
+                                   </div>
+    <div class="movie" title="tt1288501">
+                                    <img src="http://ia.media-imdb.com/images/M/MV5BNTJiNGY5ODktYTBmNS00Yzk5LWFmM2QtYThlZjFjNWMxN2Q2XkEyXkFqcGdeQXVyNDUzOTQ5MjY@._V1_SX300.jpg" alt="" class="poster">
+                                     <div class="title">Gears of War 2</div>
+                                     <div class="info">
+                                        <span class="length"></span>
+                                        <span class="year">2008</span>
+                                       </div>
+                                       <div class="desc" id="tt1288501">Marcus Fenix and delta squad fight against the locust to prevent them from sinking the cities of planet Sera</div>
                                         </div>
-    <div class="movie" title="tt0098936">
-                                    <img src="http://ia.media-imdb.com/images/M/MV5BMTExNzk2NjcxNTNeQTJeQWpwZ15BbWU4MDcxOTczOTIx._V1_SX300.jpg" alt="" class="poster">
-                                     <div class="title">Twin Peaks</div>
+    <div class="movie" title="tt3393814">
+                                    <img src="http://ia.media-imdb.com/images/M/MV5BMTc4ODA0OTIwMF5BMl5BanBnXkFtZTgwNTgyNTQwNzE@._V1_SX300.jpg" alt="" class="poster">
+                                     <div class="title">Killer Instinct</div>
                                      <div class="info">
                                         <span class="length"></span>
-                                        <span class="year">1990–1991</span>
+                                        <span class="year">2013</span>
                                        </div>
-                                       <div class="desc" id="tt0098936">The body of a young girl (Laura Palmer) is washed up on a beach near the small Washington state town of Twin Peaks. FBI Special Agent Dale Cooper is called in to investigate her strange demise only to uncover a web of mystery that ultimately leads him deep into the heart of the surrounding woodland and his very own soul.</div>
-                                        </div>
-    <div class="movie" title="tt2707408">
-                                    <img src="http://ia.media-imdb.com/images/M/MV5BMjMyNzA0MTA3NV5BMl5BanBnXkFtZTgwMTYxMTA0NjE@._V1_SX300.jpg" alt="" class="poster">
-                                     <div class="title">Narcos</div>
-                                     <div class="info">
-                                        <span class="length"></span>
-                                        <span class="year">2015–</span>
-                                       </div>
-                                       <div class="desc" id="tt2707408">Narcos tells the true-life story of the growth and spread of cocaine drug cartels across the globe and attendant efforts of law enforcement to meet them head on in brutal, bloody conflict. It centers around the notorious Colombian cocaine kingpin Pablo Escobar (Wagner Moura) and Steve Murphy (Holbrook), a DEA agent sent to Colombia on a U.S. mission to capture and ultimately kill him.</div>
-                                       </div>   
-    <div class="movie" title="tt0773262">
-                                    <img src="http://ia.media-imdb.com/images/M/MV5BMTM5MjkwMTI0MV5BMl5BanBnXkFtZTcwODQwMTc0OQ@@._V1_SX300.jpg" alt="" class="poster">
-                                     <div class="title">Dexter</div>
-                                     <div class="info">
-                                        <span class="length"></span>
-                                        <span class="year">2006–2013</span>
-                                       </div>
-                                       <div class="desc" id="tt0773262">Dexter Morgan is a Forensics Expert, a loyal brother, boyfriend, and friend. That's what he seems to be, but that's not what he really is. Dexter Morgan is a Serial Killer that hunts the bad.</div>
+                                       <div class="desc" id="tt3393814">N/A</div>
                                         </div>                                 
   </section>
 </div>  
-<h2>Series</h2>
+<h2 id="tituloSeries">Series</h2>
 <div id="listOfSeries">
 </div>
 <div class="detail">
