--- a/Inicio/games.html
+++ b/Inicio/games.html
@@ -18,31 +18,7 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
   <script src="js/movies.js"></script>
-  <script>
-    $(document).ready(function(){
-      console.log("documento cargado");
-      $("li").mouseover(function(){
-        $(this).addClass('active') ;
-      });
-      $("li").mouseout(function(){
-        $(this).removeClass('active');
-      });
-
-    });
-
-
-    function getSearch(){
-      var searchAux = document.getElementById("search").value;
-      var search="",caracter;
-      for( var i = 0; i < searchAux.length;i++){
-            if(searchAux.charAt(i) == " ")
-              search+="+";
-            else
-              search += searchAux.charAt(i);
-      }
-      return search;
-    }
-  </script>
+ 
 
   <title>
   Inicio  
@@ -83,8 +59,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
 
-        <li id="enCartelera"><a href="index.html">En cartelera <span class="sr-only">(current)</span></a></li>
-        <li ><a href="games.html">Juegos</a></li>
+        <li ><a href="index.html">In Theaters <span class="sr-only">(current)</span></a></li>
+        <li ><a href="games.html">Games</a></li>
         <li ><a href="series.html">Series</a></li>
        
       </ul>
@@ -94,12 +70,32 @@
           <datalist id="listOfSearchs"></datalist>
         </div>
         <button type="button" class="btn btn-default" id="enviaDatos" name="enviaDatos">Submit</button>
+        <button type="button" class="btn btn-default" id="advanceButton">Advance</button>
+        <div id="advanceSearch" hidden>
+                <br>
+                <h3>Advance Search</h3>
+                <br>
+                <label >
+                    <input type="radio" id="movieRadio" name="typeOfSearch" value="movie" /> Movies
+                </label> 
+                <label >
+                    <input type="radio" id="gameRadio" name="typeOfSearch" value="game" /> Games
+                </label> 
+                <label >
+                    <input type="radio" id="seriesRadio" name="typeOfSearch" value="series"/> Series
+                </label> 
+                <label >
+                    <input type="radio" id="noneRadio" name="typeOfSearch" value="none" checked="checked"  /> I don't care 
+                </label> 
+                <input type="text" class="form-control" name="year" id="year" placeholder="Year"/>
+                </div>
       </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 <div class="app">
-  <h2 id="tituloPeliculas">Peliculas</h2>
+    <h2 id="withoutResults" hidden>No se ha encontrado ningún resultado</h2></br>
+  <h2 id="tituloPeliculas" hidden>Peliculas</h2>
   <div id="listOfMovies">
    </div>
 <h2 id="tituloJuegos">Juegos</h2>
@@ -221,7 +217,7 @@
                                         </div>                                 
   </section>
 </div>  
-<h2 id="tituloSeries">Series</h2>
+<h2 id="tituloSeries" hidden>Series</h2>
 <div id="listOfSeries">
 </div>
 <div class="detail">
